--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -1,1 +1,5 @@
 <h1>Hi world</h1>
+<form id="uploadForm" enctype="multipart/form-data" action="/api/photo" method="post">
+<input type="file" name="userPhoto" />
+<input type="submit" value="Upload Image" name="submit">
+</form>
