--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -6,3 +6,11 @@
   <input type="file" name="art" />
 	<input type="submit" value="Upload Song" name="submit">
 </form>
+<div id="container">
+	<div id="song-list">heyy</div>
+	<div id="now-playing">yo</div>
+</div>
+	<!-- <form id="uploadForm" enctype="multipart/form-data" action="/midi" method="post">
+		<input type="file" name="midi" />
+		<input type="submit" value="Upload MIDI File" name="submit">
+	</form> -->
