--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -7,8 +7,9 @@
 	<input type="submit" value="Upload Song" name="submit">
 </form>
 <div id="container">
-	<div id="song-list">heyy</div>
-	<div id="now-playing">yo</div>
+	<div id="header">header</div>
+	<div id="left-content">song list</div>
+	<div id="right-content">now playing</div>
 </div>
 	<!-- <form id="uploadForm" enctype="multipart/form-data" action="/midi" method="post">
 		<input type="file" name="midi" />
