switch midi folder to songs.

--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -1,5 +1,6 @@
 <h1>Hi world</h1>
-<form id="uploadForm" enctype="multipart/form-data" action="/midi" method="post">
+<form id="uploadForm" enctype="multipart/form-data" action="/song" method="post">
 	<input type="file" name="midi" />
+  <input type="file" name="art" />
 	<input type="submit" value="Upload MIDI File" name="submit">
 </form>
