--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -1,8 +1,8 @@
 <h1>Hi world</h1>
 <form id="uploadForm" enctype="multipart/form-data" action="/song" method="post">
-  <input type="text" name="name" />
-  <input type="text" name="artist" />
-	<input type="file" name="midi" />
+  <input type="text" name="name" required/>
+  <input type="text" name="artist" required/>
+	<input type="file" name="midi" required/>
   <input type="file" name="art" />
 	<input type="submit" value="Upload Song" name="submit">
 </form>
