--- a/views/partials/song.handlebars
+++ b/views/partials/song.handlebars
@@ -1,4 +1,4 @@
 <div class="song">
 <h1>{{ title }}</h1>
-<img src="{{ art }}" class="art"></img>
+<img src="{{artPath}}" class="art"></img>
 </div>
