--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -3,11 +3,14 @@
   <head>
   	<link rel="stylesheet" type="text/css" href="/stylesheets/style.css">
   	<link href='http://fonts.googleapis.com/css?family=Open+Sans:400,300' rel='stylesheet' type='text/css'>
-  	<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+    <script src="https://cdn.socket.io/socket.io-1.3.4.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
     <meta charset="utf-8">
     <title>Acoustronic Guitar</title>
   </head>
   <body>
     {{{body}}}
   </body>
+  
+  <script src="js/main.js"></script>
 </html>
