--- a/views/partials/song.handlebars
+++ b/views/partials/song.handlebars
@@ -1,4 +1,4 @@
-<div class="song" id="{{_id}}">
+<div class="song-thumb" id="{{_id}}">
   <h1>{{name}} - {{artist}}</h1>
   <img src="{{artPath}}" class="art"></img>
 </div>
