Adding to queue works

--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -19,7 +19,7 @@
     </div>
     <div id="song-queue_wrapper">
       {{#each songQueue}}
-        {{> songQueue}}
+        {{> queuedSong}}
       {{/each}}
     </div>
   </div>
