--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -17,10 +17,8 @@
     <div id="now-playing-wrapper">
       <h1>now playing</h1>
     </div>
-    <div id="song-queue_wrapper">
-      {{#each songQueue}}
-        {{> queuedSong}}
-      {{/each}}
+    <div id="song-queue-wrapper">
+      {{> songQueue }}
     </div>
   </div>
 </div>
