--- a/views/partials/song.handlebars
+++ b/views/partials/song.handlebars
@@ -1,4 +1,5 @@
 <div class="song-thumb" id="{{_id}}">
   <h1>{{name}} - {{artist}}</h1>
   <img src="{{artPath}}" class="art"></img>
+  <div class="remove-song">X</div>
 </div>
