Handle song deletion (with minor race condition)

--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -9,9 +9,9 @@
 <div id="container">
   <div id="header">header</div>
   <div id="left-content">
-    {{#each songs}}
-      {{> song}}
-    {{/each}}
+    <div id="song-thumbs-wrapper">
+      {{> songThumbs}}
+    </div>
   </div>
   <div id="right-content">
     <div id="now-playing-wrapper">
