Fix race condition, event binding

--- a/views/partials/song.handlebars
+++ b/views/partials/song.handlebars
@@ -1,5 +1,6 @@
 <div class="song-thumb" id="{{_id}}">
   <h1>{{name}} - {{artist}}</h1>
   <img src="{{artPath}}" class="art"></img>
+  <div class="queue-song">Add to queue</div>
   <div class="remove-song">X</div>
 </div>
