--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,29 +1,29 @@
 * {
-	margin: 0;
-	padding: 0;
+  margin: 0;
+  padding: 0;
 }
-
-html, body {
-	min-height: 100%;
+html,
+body {
+  min-height: 100%;
 }
-
 #container {
-	display: -webkit-flex;
-	-webkit-flex-flow: row wrap;
-	min-height: 100%;
+  display: -webkit-flex;
+  -webkit-flex-flow: row wrap;
+  min-height: 100%;
 }
-
 #header {
-	background-color: red;
-	-webkit-flex: 1 100%;
+  background-color: #f00;
+  -webkit-flex: 1 100%;
 }
-
 #left-content {
-	background-color: blue;
-	-webkit-flex: 1 auto;
+  background-color: #00f;
+  -webkit-flex: 1 auto;
 }
-
 #right-content {
-	background-color: green;
-	-webkit-flex: 0 400px;
+  background-color: #008000;
+  -webkit-flex: 0 400px;
+}
+.song-thumb {
+  margin: 16px;
+  padding: 16px;
 }
