--- a/views/partials/song.handlebars
+++ b/views/partials/song.handlebars
@@ -1,6 +1,7 @@
 <div class="song-thumb" id="{{_id}}">
-  <h1>{{name}} - {{artist}}</h1>
+  <h1>{{name}}</h1>
+  <h2>{{artist}}</h2>
   <img src="{{artPath}}" class="art"></img>
-  <div class="queue-song">Add to queue</div>
+  <div class="queue-song">+</div>
   <div class="remove-song">X</div>
 </div>
