--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -2,28 +2,84 @@
   margin: 0;
   padding: 0;
 }
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  font-weight: 300;
+}
 html,
 body {
+  font-family: 'Open Sans', serif;
+  font-weight: 300;
+  font-size: 18px;
+  height: 100%;
   min-height: 100%;
 }
+button,
+input[type=submit] {
+  font-family: 'Open Sans', serif;
+  font-weight: 300;
+  font-size: 18px;
+  cursor: pointer;
+  display: inline-block;
+  border: none;
+  background-color: rgba(170,170,170,0.667);
+  padding: 6px;
+}
 #container {
+  height: 100%;
+}
+#flex-container {
   display: -webkit-flex;
   -webkit-flex-flow: row wrap;
+  -moz-flex-flow: row wrap;
+  -ms-flex-flow: row wrap;
+  -o-flex-flow: row wrap;
+  flex-flow: row wrap;
+  -webkit-align-items: stretch;
+  -moz-align-items: stretch;
+  -ms-align-items: stretch;
+  -o-align-items: stretch;
+  align-items: stretch;
   min-height: 100%;
 }
 #header {
   background-color: #f00;
-  -webkit-flex: 1 100%;
+  width: 100%;
 }
 #left-content {
   background-color: #00f;
   -webkit-flex: 1 auto;
+  -moz-flex: 1 auto;
+  -ms-flex: 1 auto;
+  -o-flex: 1 auto;
+  flex: 1 auto;
+}
+.song-thumbs {
+  display: -webkit-flex;
+  -webkit-flex-flow: row wrap;
+  -moz-flex-flow: row wrap;
+  -ms-flex-flow: row wrap;
+  -o-flex-flow: row wrap;
+  flex-flow: row wrap;
+}
+.song-thumbs .song-thumb {
+  margin: 16px;
+  padding: 16px;
+  -webkit-flex: 1 0;
+  -moz-flex: 1 0;
+  -ms-flex: 1 0;
+  -o-flex: 1 0;
+  flex: 1 0;
 }
 #right-content {
   background-color: #008000;
   -webkit-flex: 0 400px;
-}
-.song-thumb {
-  margin: 16px;
-  padding: 16px;
+  -moz-flex: 0 400px;
+  -ms-flex: 0 400px;
+  -o-flex: 0 400px;
+  flex: 0 400px;
 }
