--- a/stylus/style.styl
+++ b/stylus/style.styl
@@ -1,27 +1,84 @@
+font-size = 18px
+
+doc-font()
+  font-family 'Open Sans', serif
+  font-weight 300
+  font-size font-size
+
+// gist.github.com/d3vron/1080346
+vendor(prop, args)
+  -webkit-{prop} args
+  -moz-{prop} args
+  -ms-{prop} args
+  -o-{prop} args
+  {prop} args
+
+flex-flow()
+  vendor('flex-flow', arguments)
+
+flex()
+  vendor('flex', arguments)
+
+align-items()
+  vendor('align-items', arguments)
+
+align-self()
+  vendor('align-self', arguments)
+
+gradient()
+  vendor('gradient', arguments)
+
+border-image()
+  vendor('border-image', arguments)
+
 *
   margin 0
   padding 0
 
+h1, h2, h3, h4, h5, h6
+  font-weight 300
+
 html, body
+  doc-font()
+  height 100%
   min-height 100%
 
+button, input[type=submit]
+  doc-font()
+  cursor pointer
+  display inline-block
+  border none
+  background-color #aaaa
+  padding 6px
+  
 #container
+  height 100%
+  
+#flex-container
   display -webkit-flex
-  -webkit-flex-flow row wrap
+  flex-flow row wrap
+  align-items stretch
+
   min-height 100%
 
 #header
   background-color red
-  -webkit-flex 1 100%
+  width 100%
 
 #left-content
   background-color blue
-  -webkit-flex 1 auto
+  flex 1 auto
+  
+.song-thumbs
+  display -webkit-flex
+  flex-flow row wrap
+
+  .song-thumb
+    margin 16px
+    padding 16px
+    
+    flex 1 0
 
 #right-content
   background-color green
-  -webkit-flex 0 400px
-
-.song-thumb
-  margin 16px
-  padding 16px
+  flex 0 400px
