--- a/views/partials/queuedSong.handlebars
+++ b/views/partials/queuedSong.handlebars
@@ -1,4 +1,4 @@
 <div class="song-queued" id="{{_id}}">
-  <p>{{name}} - {{artist}}</p>
-  <div class="remove-song">X</div>
+  <span>{{name}} - {{artist}}</span>
+  <i class="remove-song pe-lg pe-7s-close"></i>
 </div>
