--- a/views/partials/song.handlebars
+++ b/views/partials/song.handlebars
@@ -2,6 +2,6 @@
   <h1>{{name}}</h1>
   <h2>{{artist}}</h2>
   <img src="{{artPath}}" class="art"></img>
-  <div class="queue-song">+</div>
-  <div class="remove-song">X</div>
+  <i class="queue-song pe-lg pe-7s-plus"></i>
+  <i class="remove-song pe-lg pe-7s-close"></i>
 </div>
