--- a/stylus/style.styl
+++ b/stylus/style.styl
@@ -99,6 +99,7 @@ button, input[type=submit]
     position relative
 
     vertical-align middle
+    white-space nowrap
     
     .remove-song
       cursor pointer
