Now with 100% less of the color "greem"

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -99,7 +99,7 @@ input[type=submit] {
   height: 100%;
 }
 #right-content {
-  background-color: greem;
+  background-color: #008000;
   -webkit-flex: 1 0;
   -moz-flex: 1 0;
   -ms-flex: 1 0;
