--- a/stylus/style.styl
+++ b/stylus/style.styl
@@ -101,6 +101,9 @@ button, input[type=submit]
     vertical-align middle
     white-space nowrap
     
+    h5
+      color #222
+    
     .remove-song
       cursor pointer
       
