--- a/views/partials/queuedSong.handlebars
+++ b/views/partials/queuedSong.handlebars
@@ -1,4 +1,4 @@
 <div class="song-queued" id="{{_id}}">
-  <span>{{name}} - {{artist}}</span>
+  <h4>{{name}}</h4><h5>{{artist}}</h5>
   <i class="remove-song pe-lg pe-7s-close"></i>
 </div>
