--- a/stylus/style.styl
+++ b/stylus/style.styl
@@ -1,4 +1,7 @@
+@import "colors"
 font-size = 18px
+
+navbar-height = 3rem
 
 doc-font()
   font-family 'Open Sans', serif
@@ -30,6 +33,13 @@ gradient()
 
 border-image()
   vendor('border-image', arguments)
+  
+vertical-center()
+  position: relative;
+  top: 50%;
+  -webkit-transform: translateY(-50%);
+  -ms-transform: translateY(-50%);
+  transform: translateY(-50%);
 
 *
   margin 0
@@ -42,6 +52,7 @@ html, body
   doc-font()
   height 100%
   min-height 100%
+  color $clr-grey-600
 
 button, input[type=submit]
   doc-font()
@@ -53,6 +64,7 @@ button, input[type=submit]
   
 #container
   height 100%
+  margin-top navbar-height
   
 #flex-container
   display -webkit-flex
@@ -61,56 +73,135 @@ button, input[type=submit]
 
   min-height 100%
 
-#header
-  background-color red
-  width 100%
+#navbar
+  box-sizing border-box
+  color #FFF
+  font-weight 500
+  font-size 24px
+  height navbar-height
+  display flex
+  padding 0.5rem 3rem 0.5rem 3rem
+  background-color $clr-blue
+  box-shadow 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24)
+  border 1px solid transparent
+  position fixed
+  right 0
+  left 0
+  top 0
+  z-index 1000
 
-#left-content
-  background-color blue
-  flex 2 0
+#navbar-left
+  flex-grow 1
+
+#navbar-right
+  flex-grow 4
+  display flex
+  flex-direction row-reverse
   
+#navbar-buttons
+  flex-grow 1
+  display flex
+  justify-content flex-end
+  list-style-type none
+  
+#navbar-buttons li
+  margin 0 1.5rem 0 1.5rem
+
+  
+#navbar-buttons li:first-child
+  margin-left 0
+  
+#navbar-buttons li:last-child
+  margin-right 0
+  
+.navbar-button
+  color #FFF
+  text-decoration none
+  
+#left-content
+  background-color $clr-blue-100
+  flex 4.5 0
   padding 1rem
 
 .song-thumbs
   display -webkit-flex
   flex-flow row wrap
+  align-items flex-start
 
   .song-thumb
+    width: 300px
+    box-shadow 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24)
+    border 1px solid transparent
+    background-color $clr-blue-50
     margin 1rem
-    padding 1rem
+    padding 1rem 1rem 0 1rem
     
     flex 0 auto
     position relative
+    cursor pointer
     
-    .queue-song
+    h2, h3
+      white-space nowrap
+      overflow hidden
+      text-overflow ellipsis 
+    
+    .art
+      padding-bottom 1rem
+    
+    .remove-song
       cursor pointer
       position absolute
       top 0
       right 0
+      
+#now-playing-wrapper
+  margin-bottom 0.5rem
+
+.song-queue
+  .song-queued
+    height 5rem
+    background-color $clr-grey-50
+    position relative
+    vertical-align middle
+    white-space nowrap
+    display flex
+    box-shadow 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24)
+    border 1px solid transparent
+    margin-bottom 0.5rem
+    
+    h5
+      color $clr-grey-600
+      
+  .queued-left
+    flex 0 0 5rem
+        
+    .queued-art
+      height 5rem
+      width auto   
+
+  .queued-right
+    padding 0.5rem 0 0.5rem 0.5rem
+    
+    h4, h5
+      white-space nowrap
+      overflow hidden
+      text-overflow ellipsis 
+      margin-bottom 0.25rem
+      
+    h5
+      margin-bottom 0 
     
     .remove-song
       cursor pointer
       position absolute
       top 0
-      left 0
-
-.song-queue
-  .song-queued
-    position relative
-
-    vertical-align middle
-    white-space nowrap
-    
-    h5
-      color #222
-    
-    .remove-song
-      cursor pointer
-      
+      right 0
       height 100%
 
 #right-content
-  background-color green
+  box-shadow 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24)
+  border 1px solid transparent
+  background-color $clr-grey-100
   flex 1 0
   
   padding 1rem
