--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -10,11 +10,25 @@
     
     <script src="https://cdn.socket.io/socket.io-1.3.4.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/handlebars.js/3.0.1/handlebars.runtime.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/handlebars.js/2.0.0-alpha.4/handlebars.runtime.min.js"></script>
     <meta charset="utf-8">
     <title>Acoustronic Guitar</title>
   </head>
   <body>
+    <nav id="navbar">
+      <div id="navbar-left">
+        <div id="logo">
+          Acoustronic Guitar
+        </div>
+      </div>
+      <div id="navbar-right">
+        <ul id="navbar-buttons">
+          <li id="about"><a class="navbar-button" href="/#">About Us</a></li>
+          <li id="playing"><a class="navbar-button" href="/">Playing</a></li>
+          <li id="upload"><a class="navbar-button" href="/upload">Upload</a></li>
+        </ul>
+      </div>
+    </nav>
     {{{body}}}
   </body>
   
