--- a/views/partials/queuedSong.handlebars
+++ b/views/partials/queuedSong.handlebars
@@ -1,4 +1,10 @@
 <div class="song-queued" id="{{_id}}">
-  <h4>{{name}}</h4><h5>{{artist}}</h5>
-  <i class="remove-song pe-lg pe-7s-close"></i>
+  <div class="queued-left">
+    <img class="queued-art" src="{{artPath}}"/>
+  </div>
+  <div class="queued-right">
+    <h4>{{name}}</h4>
+    <h5>{{artist}}</h5>
+    <i class="remove-song pe-lg pe-7s-close"></i>
+  </div>
 </div>
