--- a/views/upload.handlebars
+++ b/views/upload.handlebars
@@ -1,7 +1,7 @@
 <div id="container">
   <form id="uploadForm" enctype="multipart/form-data" action="/song" method="post">
     Title: <input type="text" name="name" required/>
-    Artist: <input type="text" name="artist" required/>
+    Artist: <input type="text" name="artist"/>
     Midi: <input type="file" name="midi" required/>
     <input type="submit" value="Upload Song" name="submit">
   </form>
