--- a/stylus/style.styl
+++ b/stylus/style.styl
@@ -66,12 +66,11 @@ button, input[type=submit]
   height 100%
   margin-top navbar-height
   
+  
 #flex-container
   display -webkit-flex
   flex-flow row wrap
   align-items stretch
-
-  min-height 100%
 
 #navbar
   box-sizing border-box
@@ -120,16 +119,16 @@ button, input[type=submit]
   
 #left-content
   background-color $clr-blue-100
-  flex 4.5 0
+  flex 1 2
   padding 1rem
-
+  
 .song-thumbs
   display -webkit-flex
   flex-flow row wrap
   align-items flex-start
 
   .song-thumb
-    width: 300px
+    width: 250px
     box-shadow 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24)
     border 1px solid transparent
     background-color $clr-blue-50
@@ -147,6 +146,7 @@ button, input[type=submit]
     
     .art
       padding-bottom 1rem
+      width 250px
     
     .remove-song
       cursor pointer
@@ -202,6 +202,5 @@ button, input[type=submit]
   box-shadow 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24)
   border 1px solid transparent
   background-color $clr-grey-100
-  flex 1 0
-  
+  flex 0 0 16rem
   padding 1rem
