--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -36,6 +36,7 @@ input[type=submit] {
 }
 #flex-container {
   display: -webkit-flex;
+  display: flex;
   -webkit-flex-flow: row wrap;
   -moz-flex-flow: row wrap;
   -ms-flex-flow: row wrap;
@@ -53,6 +54,7 @@ input[type=submit] {
   font-weight: 500;
   font-size: 24px;
   height: 3rem;
+  display: -webkit-flex;
   display: flex;
   padding: 0.5rem 3rem 0.5rem 3rem;
   background-color: #2196f3;
@@ -65,16 +67,38 @@ input[type=submit] {
   z-index: 1000;
 }
 #navbar-left {
+  -webkit-flex-grow: 1;
+  -moz-flex-grow: 1;
+  -ms-flex-grow: 1;
+  -o-flex-grow: 1;
   flex-grow: 1;
 }
 #navbar-right {
+  -webkit-flex-grow: 4;
+  -moz-flex-grow: 4;
+  -ms-flex-grow: 4;
+  -o-flex-grow: 4;
   flex-grow: 4;
+  display: -webkit-flex;
   display: flex;
+  -webkit-flex-direction: row-reverse;
+  -moz-flex-direction: row-reverse;
+  -ms-flex-direction: row-reverse;
+  -o-flex-direction: row-reverse;
   flex-direction: row-reverse;
 }
 #navbar-buttons {
+  -webkit-flex-grow: 1;
+  -moz-flex-grow: 1;
+  -ms-flex-grow: 1;
+  -o-flex-grow: 1;
   flex-grow: 1;
+  display: -webkit-flex;
   display: flex;
+  -webkit-justify-content: flex-end;
+  -moz-justify-content: flex-end;
+  -ms-justify-content: flex-end;
+  -o-justify-content: flex-end;
   justify-content: flex-end;
   list-style-type: none;
 }
@@ -102,6 +126,7 @@ input[type=submit] {
 }
 .song-thumbs {
   display: -webkit-flex;
+  display: flex;
   -webkit-flex-flow: row wrap;
   -moz-flex-flow: row wrap;
   -ms-flex-flow: row wrap;
@@ -153,6 +178,7 @@ input[type=submit] {
   position: relative;
   vertical-align: middle;
   white-space: nowrap;
+  display: -webkit-flex;
   display: flex;
   box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
   border: 1px solid transparent;
