changed background of first color

--- a/stylus/style.styl
+++ b/stylus/style.styl
@@ -189,6 +189,9 @@ button, input[type=submit]
     border 1px solid transparent
     margin-bottom 0.5rem
     
+    &:first-child
+      background-color $clr-blue-50
+    
     h5
       color $clr-grey-600
       
